# mailviewer

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  _build.rs  build.rs  flatpak.sh  i18n.toml  io.github.alescdb.mailviewer.json  mailviewer-sources.json  meson.build  org.cosinus.mailviewer.json  rustfmt.toml  sample.msg  std
.cargo/: config.toml
.github/workflows/: build-test.yml  ci.yml  dev.yml  develop.yml  prerelease-aarch64.yml  prerelease-x86_64.yml  prerelease.yml  release.yml
data/: io.github.alescdb.mailviewer.desktop.in  io.github.alescdb.mailviewer.gschema.xml  io.github.alescdb.mailviewer.metainfo.xml.in  meson.build  org.cosinus.mailviewer.desktop.in  org.cosinus.mailviewer.gschema.xml  org.cosinus.mailviewer.metainfo.xml.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  fr_FR.po  it.po  mailviewer.pot  meson.build  nl.po
src/: application.rs  config.rs  config.rs.in  gmimeinit.rs  html.rs  lib.rs  mailparser.rs  mailservice.rs  mailviewer.gresource.xml  main.rs  meson.build  preferences.ui  window.rs  window.ui
src/css/: style.css
src/gtk/: help-overlay.ui
src/message/: attachment.rs  electronicmail.rs  message.rs  mod.rs  outlook.rs
src/test_utils/: mod.rs
src/utils/: mod.rs
tests/: html.eml  html_tests.rs  mailparser_tests.rs  test.html  text.eml
