[package]
name = "mailviewer"
version = "1.0.8"
edition = "2021"
authors = ["Alexandre Del Bigio"]
description = "GNOME eml and Outlook msg file viewer"
readme = "README.md"
repository = "https://github.com/alescdb/mailviewer"
license = "GPL-3.0+"

[dependencies]
webkit6 = "0.6.1"
gmime = "0.8.1"
gtk4 = { version = "0.11.2", features = ["v4_22"] }
nipper = "0.1.9"
log = "0.4.29"
env_logger = "0.11.10"
base64 = "0.22.1"
adw = { version = "0.9.1", features = ["v1_8"], package = "libadwaita" }
ctor = "0.10.0"
msg_parser = "0.3.6"
uuid = { version = "1.23.1", features = ["v4"] }
lazy_static = "1.5.0"
hex = "0.4.3"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
hashbrown = "0.17.0"
encoding_rs = "0.8.35"
futures-util = "0.3.32"
